gccida/g2/form_sum
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5557:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5559:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
y = ( rtx)x[1]; 
          ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5574:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5577:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5586:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/reload.c:5592:31: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, y, x); 
                              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/form_sum/src/obj/reload.o] Error 1
